# DemandDrivenDefUseAnalysis

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.314de9a  CMakeLists.txt.user.3e069e7  README.md  correlationDetection.cpp  dataFlowHelper.hpp  defUseAnalysis.cpp  defuseanalysisconfig.h.in  defuseanalysisrefiningwithinfeasiblepath.h  demandDrivenDataFlowHelper.h  pairutility.hpp  test_script.sh  twoBranches_success.ll
_build/: CMakeCache.txt  CTestTestfile.cmake  DefUseAnalysisConfig.h  DefUseAnalysisConfig_RW.h  DefUseAnalysisConfig_RWO.h  cmake_install.cmake  correlationDetection_RW.cpp  correlationDetection_RWO.cpp
_build/Testing/Temporary/: CTestCostData.txt
_build/script/: RUNME.sh
benchmark/: README.md  jasper.bc
benchmark/Makefiles/decode/: Makefile
build-DemandDrivenDefUseAnalysis-compiler_project-Default/: CMakeCache.txt  CTestTestfile.cmake  DemandDrivenDefUseAnalysis.cbp  cmake_install.cmake  infeasePath_simplest.ll
build-DemandDrivenDefUseAnalysis-llvm-Default/: CMakeCache.txt
experiments/: get_report.b2b.c  mb2_video.b2b.oprofile.results  run_mb2_video.b2b.oprofile
experiments/JEPG-2000/: Makefile  get_report.rr.c  mb2_vid_jpg2000.tgz  mb2_video.rr.oprofile.results  run_mb2_video.rr.oprofile
experiments/JEPG-2000/jasper-1.701.0/: Makefile  config.status  configure  libtool
experiments/JEPG-2000/jasper-1.701.0/src/: Makefile
experiments/JEPG-2000/jpg2000dec/: README.exec_info
experiments/JEPG-2000/jpg2000dec/oprofile_results/: jpg2000dec.combined_results.b2b.oprofile  jpg2000dec.combined_results.rr.oprofile  oprofile_run1.b2b.results  oprofile_run1.rr.results  oprofile_run10.b2b.results  oprofile_run10.rr.results  oprofile_run11.b2b.results  oprofile_run11.rr.results  oprofile_run12.b2b.results  oprofile_run12.rr.results  oprofile_run13.b2b.results  oprofile_run13.rr.results  oprofile_run14.b2b.results  oprofile_run14.rr.results  oprofile_run15.b2b.results  oprofile_run15.rr.results  oprofile_run16.b2b.results  oprofile_run16.rr.results  oprofile_run17.b2b.results  oprofile_run17.rr.results  oprofile_run18.b2b.results  oprofile_run18.rr.results  oprofile_run19.b2b.results  oprofile_run19.rr.results  oprofile_run2.b2b.results  oprofile_run2.rr.results  oprofile_run20.b2b.results  (+37 more)
experiments/JEPG-2000/jpg2000enc/: README.config  README.exec_info
experiments/h264dec/: README.config  README.exec_info
experiments/h264dec/JM/: CHANGES.TXT  Readme.txt  lencod.dsp
experiments/h264dec/input_base/: input_base_4CIF_96bps_decoder.cfg  input_base_4CIF_96bps_leakybucketparam.cfg
experiments/h264dec/oprofile_results/: dataDec.txt  h264dec  h264dec.combined_results.b2b.oprofile  h264dec.combined_results.rr.oprofile  input_base_4CIF_96bps.264  log.dec  oprofile_run1.b2b.results  oprofile_run1.rr.results  oprofile_run10.b2b.results  oprofile_run10.rr.results  oprofile_run11.b2b.results  oprofile_run11.rr.results  oprofile_run12.b2b.results  oprofile_run12.rr.results  oprofile_run13.b2b.results  oprofile_run13.rr.results  oprofile_run14.b2b.results  oprofile_run14.rr.results  oprofile_run15.b2b.results  oprofile_run15.rr.results  oprofile_run16.b2b.results  oprofile_run16.rr.results  oprofile_run17.b2b.results  oprofile_run17.rr.results  oprofile_run18.b2b.results  oprofile_run18.rr.results  oprofile_run19.b2b.results  oprofile_run19.rr.results  oprofile_run2.b2b.results  oprofile_run2.rr.results  oprofile_run20.b2b.results  oprofile_run20.rr.results  oprofile_run21.b2b.results  oprofile_run21.rr.results  oprofile_run22.b2b.results  oprofile_run22.rr.results  oprofile_run23.b2b.results  oprofile_run23.rr.results  oprofile_run24.b2b.results  oprofile_run24.rr.results  (+27 more)
experiments/h264dec/output_base/: dataDec.txt  log.dec
experiments/h264enc/: README.config  README.exec_info
experiments/h264enc/JM/: ldecod.dsp
experiments/h264enc/input_base/: input_base_4CIF_96bps_encoder.cfg
experiments/h264enc/oprofile_results/: data.txt  h264enc  h264enc.combined_results.b2b.oprofile  h264enc.combined_results.rr.oprofile  oprofile_run1.b2b.results  oprofile_run1.rr.results  oprofile_run10.b2b.results  oprofile_run10.rr.results  oprofile_run11.b2b.results  oprofile_run11.rr.results  oprofile_run12.b2b.results  oprofile_run12.rr.results  oprofile_run13.b2b.results  oprofile_run13.rr.results  oprofile_run14.b2b.results  oprofile_run14.rr.results  oprofile_run15.b2b.results  oprofile_run15.rr.results  oprofile_run16.b2b.results  oprofile_run16.rr.results  oprofile_run17.b2b.results  oprofile_run17.rr.results  oprofile_run18.b2b.results  oprofile_run18.rr.results  oprofile_run19.b2b.results  oprofile_run19.rr.results  oprofile_run2.b2b.results  oprofile_run2.rr.results  oprofile_run20.b2b.results  oprofile_run20.rr.results  oprofile_run21.b2b.results  oprofile_run21.rr.results  oprofile_run22.b2b.results  oprofile_run22.rr.results  oprofile_run23.b2b.results  oprofile_run23.rr.results  oprofile_run24.b2b.results  oprofile_run24.rr.results  oprofile_run25.b2b.results  oprofile_run25.rr.results  (+25 more)
experiments/h264enc/output_base/: data.txt  leakybucketparam.cfg
results/: results-benchmark.md  results-toy-examples.md
results/benchmark/: RWO_dec_h264.txt  RWO_enc_h264.txt  RWO_jpeg200.txt  RW_dec_h264.txt  RW_enc_h264.txt  RW_jpeg200.txt  results-dec-rw.txt  results-dec-rwo.txt  results-en-rw.txt  results-en-rwo.txt  tradit_jpeg200.txt  tradit_on_H264_decoder.txt  tradit_on_H264_encoder.txt
results/correlationDetection/: Makefile  infeasePathToyExample.ll  twoBranches.ll
test/: infeasiblePathDU.ll
tests/genToyExample/_build/: CMakeCache.txt  cmake_install.cmake
tests/genToyExample/build2/: CMakeCache.txt  cfg._Z3foov.dot  cmake_install.cmake  tmp.dot
tests/genToyExample/nbproject/: configurations.xml  project.xml
tests/genToyExample/src/: CMakeLists.txt  marker.cc  twoBranches.cc
tools/genToyExample/: CMakeLists.txt
tools/genToyExample/src/: CMakeLists.txt  Makefile  defUseIntra.cc  defUseIntra.ll  infeasiblePathDU.cc  infeasiblePathDU.ll  marker.ll  simplest.cc  simplest.ll  twoBranches.cc  twoBranches.ll  welcome.cc  welcome.ll
(+153 files in other folders)
